fixed ajax button alignment
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@70372 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/layout.css
+++ b/css/layout.css
@@ -20,7 +20,7 @@ body {
 .ajaxActions {
 	position: absolute;
 	bottom: 5px;
-	right: 15px;
+	right: 8px;
 	text-align: right;
 }
 
